[package]
name = "adaptive_hangman"
version = "0.1.0"
authors = ["Ondřej Hošek <ondra.hosek@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1" }
rand = { version = "0.7" }

[lib]
name = "adaptive_hangman"
path = "src/lib/lib.rs"

[[bin]]
name = "ah_game"
path = "src/bin/ah_game/main.rs"

[[bin]]
name = "ah_player"
path = "src/bin/ah_player/main.rs"
